# fractals

./: CMakeLists.txt  coloring.cpp  coloring.h  deploy_and_run.ps1  main.cpp  mandelbrot.h  mandelbrotWidget.cpp  mandelbrotWidget.h
zws/: CMakeLists.txt  CommandsToStart.txt  build-runMinGW.ps1  coloring.cpp  coloring.h  deploy_and_run.ps1  main.cpp  mandelbrot.cpp  mandelbrotWidget.cpp  mandelbrotWidget.h
